Add scores and gaps to data collection

--- a/local/inputs.conf
+++ b/local/inputs.conf
@@ -4,3 +4,15 @@ start_by_shell = false
 sourcetype = ThirdParty_GRX
 interval = 30
 
+[gapsandremediations_cybergrx]
+index = default
+start_by_shell = false
+sourcetype = GapsAndRemediations_GRX
+interval = 30
+
+[assessmentscore_grx]
+index = default
+start_by_shell = false
+sourcetype = Scores_GRX
+interval = 30
+
