--- a/local/props.conf
+++ b/local/props.conf
@@ -11,3 +11,24 @@ KV_MODE = json
 SHOULD_LINEMERGE = 0
 category = Splunk App Add-on Builder
 pulldown_type = 1
+
+[ResidualRisk_GRX]
+SHOULD_LINEMERGE = 0
+category = Splunk App Add-on Builder
+pulldown_type = 1
+
+[GapsAndRemediations_GRX]
+KV_MODE = json
+SHOULD_LINEMERGE = 0
+category = Splunk App Add-on Builder
+pulldown_type = 1
+
+[scores_cybergrx]
+SHOULD_LINEMERGE = 0
+category = Splunk App Add-on Builder
+pulldown_type = 1
+
+[Scores_GRX]
+SHOULD_LINEMERGE = 0
+category = Splunk App Add-on Builder
+pulldown_type = 1
