--- a/local/restmap.conf
+++ b/local/restmap.conf
@@ -1,11 +1,21 @@
 
 [admin:api_connector_splunk]
 match = /
-members = api_connector_splunk_thirdparty_cybergrx, api_connector_splunk_settings
+members = api_connector_splunk_thirdparty_cybergrx, api_connector_splunk_assessmentscore_grx, api_connector_splunk_gapsandremediations_cybergrx, api_connector_splunk_settings
 
 [admin_external:api_connector_splunk_thirdparty_cybergrx]
 handlertype = python
 handlerfile = api_connector_splunk_rh_thirdparty_cybergrx.py
+handleractions = edit, list, remove, create
+
+[admin_external:api_connector_splunk_assessmentscore_grx]
+handlertype = python
+handlerfile = api_connector_splunk_rh_assessmentscore_grx.py
+handleractions = edit, list, remove, create
+
+[admin_external:api_connector_splunk_gapsandremediations_cybergrx]
+handlertype = python
+handlerfile = api_connector_splunk_rh_gapsandremediations_cybergrx.py
 handleractions = edit, list, remove, create
 
 [admin_external:api_connector_splunk_settings]
