--- a/local/web.conf
+++ b/local/web.conf
@@ -7,6 +7,22 @@ methods = POST, GET
 pattern = api_connector_splunk_thirdparty_cybergrx/*
 methods = POST, GET, DELETE
 
+[expose:api_connector_splunk_assessmentscore_grx]
+pattern = api_connector_splunk_assessmentscore_grx
+methods = POST, GET
+
+[expose:api_connector_splunk_assessmentscore_grx_specified]
+pattern = api_connector_splunk_assessmentscore_grx/*
+methods = POST, GET, DELETE
+
+[expose:api_connector_splunk_gapsandremediations_cybergrx]
+pattern = api_connector_splunk_gapsandremediations_cybergrx
+methods = POST, GET
+
+[expose:api_connector_splunk_gapsandremediations_cybergrx_specified]
+pattern = api_connector_splunk_gapsandremediations_cybergrx/*
+methods = POST, GET, DELETE
+
 [expose:api_connector_splunk_settings]
 pattern = api_connector_splunk_settings
 methods = POST, GET
