--- a/local/app.conf
+++ b/local/app.conf
@@ -3,10 +3,11 @@
 state_change_requires_restart = true
 is_configured = false
 state = enabled
-build = 2
+build = 5
 
 [launcher]
-version = 1.0.0
+author = Dean Kooiman
+version = 1.0.1
 
 [ui]
 is_visible = 1
