--- a/local/props.conf
+++ b/local/props.conf
@@ -29,6 +29,7 @@ category = Splunk App Add-on Builder
 pulldown_type = 1
 
 [Scores_GRX]
+KV_MODE = json
 SHOULD_LINEMERGE = 0
 category = Splunk App Add-on Builder
 pulldown_type = 1
