--- a/local/app.conf
+++ b/local/app.conf
@@ -3,11 +3,12 @@
 state_change_requires_restart = true
 is_configured = false
 state = enabled
-build = 5
+build = 6
 
 [launcher]
 author = Dean Kooiman
-version = 1.0.1
+version = 1.0.2
+description = Third party cyber security risk management.
 
 [ui]
 is_visible = 1
