--- a/local/inputs.conf
+++ b/local/inputs.conf
@@ -1,18 +1,18 @@
-[thirdparty_cybergrx]
+[cybergrx_thirdparty]
 index = default
 start_by_shell = false
-sourcetype = ThirdParty_GRX
+sourcetype = CyberGRX:ThirdParty
 interval = 43200
 
-[assessmentscore_grx]
+[cybergrx_gapsandremediations]
 index = default
 start_by_shell = false
-sourcetype = Scores_GRX
+sourcetype = CyberGRX:GapsAndRemediations
 interval = 172800
 
-[gapsandremediations_cybergrx]
+[cybergrx_score]
 index = default
 start_by_shell = false
-sourcetype = GapsAndRemediations_GRX
+sourcetype = CyberGRX:Score
 interval = 172800
 
