--- a/local/props.conf
+++ b/local/props.conf
@@ -1,35 +1,25 @@
 [source::...cybergrx-api-connector*.log*]
-SHOULD_LINEMERGE = true
+SHOULD_LINEMERGE = true	
+sourcetype = cybergrx:api:connector:log	
+
+[source::...cybergrx_api_connector*.log*]	
+SHOULD_LINEMERGE = true	
 sourcetype = cybergrx:api:connector:log
 
-[source::...cybergrx_api_connector*.log*]
-SHOULD_LINEMERGE = true
-sourcetype = cybergrx:api:connector:log
-
-[ThirdParty_GRX]
+[CyberGRX:GapsAndRemediations]
 KV_MODE = json
 SHOULD_LINEMERGE = 0
-category = Splunk App Add-on Builder
+category = CyberGRX Gaps and remediations
 pulldown_type = 1
 
-[ResidualRisk_GRX]
-SHOULD_LINEMERGE = 0
-category = Splunk App Add-on Builder
-pulldown_type = 1
-
-[GapsAndRemediations_GRX]
+[CyberGRX:Score]
 KV_MODE = json
 SHOULD_LINEMERGE = 0
-category = Splunk App Add-on Builder
+category = CyberGRX Scores
 pulldown_type = 1
 
-[scores_cybergrx]
-SHOULD_LINEMERGE = 0
-category = Splunk App Add-on Builder
-pulldown_type = 1
-
-[Scores_GRX]
+[CyberGRX:ThirdParty]
 KV_MODE = json
 SHOULD_LINEMERGE = 0
-category = Splunk App Add-on Builder
+category = CyberGRX Third Parties
 pulldown_type = 1
